--- a/nginx.conf
+++ b/nginx.conf
@@ -20,10 +20,17 @@ http {
   #include /etc/nginx/conf.d/*.conf;
 server {
   listen 80;
+  root /var/www/out
+
   location / {
     root   /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri $uri/ /index.html;
+    try_files $uri $uri/ =404;
   }
+}
+
+error_page 404 /404/html;
+location = /404.html {
+  root /usr/share/nginx/html;
+  internal;
 }
 }
